# selfie

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  pyproject.toml
examples/: two_charges_sphere.rs
python/bemtzmann/: __init__.py  _bemtzmann.pyi
python/selfie/: __init__.py  _selfie.pyi
scripts/: load_obj.tcl
src/: error.rs  lib.rs  linear_response.rs  main.rs  python.rs  units.rs
src/analytical/: bessel.rs  born.rs  kirkwood.rs  kirkwood_inside.rs  kirkwood_inside_salt.rs  kirkwood_salt.rs  legendre.rs  mod.rs  onsager.rs
src/geometry/: icosphere.rs  mod.rs  panel.rs
src/geometry/molecular_surface/: density.rs  grid.rs  marching_cubes.rs  mod.rs  smoothing.rs
src/io/: mod.rs  msms.rs  pqr.rs  xyz.rs
src/solver/: assembly.rs  context.rs  gmres.rs  kernel.rs  linalg.rs  mod.rs  operator.rs  panel_integrals.rs  precond.rs
src/solver/treecode/: mod.rs  multipole.rs  multipole_laplace.rs  octree.rs  solid_harmonic.rs
tests/: atoms_gaussian.rs  born_match.rs  kirkwood_inside_match.rs  kirkwood_inside_salt_match.rs  kirkwood_match.rs  kirkwood_salt_match.rs  linear_response_lysozyme.rs  linear_response_match.rs  onsager_match.rs  pygbe_compare.rs  pygbe_lys_mesh.rs  pygbe_sphere_mesh.rs  self_consistency.rs
tests/common/: mod.rs
tests/data/: README.md
tests/data/pygbe_lys/: README.md
tests/data/pygbe_sphere/: README.md
tests/python/: test_smoke.py
